project_1&2&9/1_refer_module/vpc&sg&ec2/ec2.tf
resource "aws_instance" "webserver" {
  count         = 3
  ami           = data.aws_ami.ubuntu.id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.Private[count.index].id

  tags = {
    Name = "webserver-${count.index}"
  }
}



output "pivate-ip" {
  value = aws_instance.webserver[*].private_ip
}


resource "aws_instance" "webserver-1" {
  count                       = 3
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.Public_subnet[count.index].id
  associate_public_ip_address = true #Auto-assign public ip when instance will launch

  tags = {
    Name = "DevCloudGeek-webserver-${count.index}"
  }
}

output "public-ip" {
  value = aws_instance.webserver-1[*].public_ip
}

# resource "aws_instance" "webserver" {
#   count                       = 3
#   ami                         = data.aws_ami.ubuntu.id
#   instance_type               = var.instance_type
#   subnet_id                   = element(aws_subnet.public[*].id, count.index) == "" ? aws_subnet.private[count.index % length(aws_subnet.private)].id : aws_subnet.public[count.index % length(aws_subnet.public)].id
#   associate_public_ip_address = true
# }
